@@ -141,6 +141,13 @@ Unless C<--skip-inline-token-annotations> is set,
 this will contain annotations as well.
 Defaults to C<tokens> and C<morpho>.
 
+The inline token data will also be stored in the
+inline structures file (see I<--inline-structures>),
+unless the inline tokens foundry is prepended
+by an B<!> exclamation mark, indicating that inline
+tokens are stored exclusively in the inline tokens
+file.
+
 =item B<--inline-structures> <foundry>#[<file>]
 
 Define the foundry and file (without extension)
