@@ -12,6 +12,7 @@
         - Improve script handling of broken data
         - Improve handling of unknown header types
         - Check for valid sigles to avoid broken directories
+        - Introduce exclusivity for inline tokens handling.
 
 1.00 2021-02-18 Release
         - -s option added that uses sentence boundaries
